--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,6 @@
 {
-  "name": "YAAF-Miner App",
-  "description": "YAAF-Miner App",
-  "iconPath": "logoyaaf192.png",
-  "short_name": "YAAF-Miner App",
-  "start_url": ".",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -11,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logoyaaf192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logoyaaf512.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
